Freedom Sanbox Ant Deploy/src/objects/Income__c.object
<CustomObject>
    <fields>
        <fullName>Annualized__c</fullName>
        <formula>Income_Amount__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annualized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_del__c</fullName>
        <label>Annualized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Beneficiary__c</fullName>
        <label>Beneficiary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <label>Business Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Year__c</fullName>
        <inlineHelpText>If End Year is not mentioned than we will assume your retirement year as the end year for the particular asset</inlineHelpText>
        <label>End Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Incomes</relationshipLabel>
        <relationshipName>Incomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half-Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly, Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From_Portal__c</fullName>
        <label>From_Portal</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Income_Amount__c</fullName>
        <label>Income Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Growth_Rate__c</fullName>
        <label>Income Growth Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Income_Type__c</fullName>
        <label>Income Type</label>
        <picklist>
            <picklistValues>
                <fullName>Dividend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Share of profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Royalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inheritance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsSynched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSynched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Income__c</fullName>
        <formula>CASE( Frequency__c,
&apos;Monthly&apos;, Income_Amount__c,
&apos;Quarterly&apos;, Income_Amount__c/3,
&apos;Half-Yearly&apos;, Income_Amount__c/6,
&apos;Annual&apos;, Income_Amount__c/12,
Income_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Portal_Id__c</fullName>
        <label>Portal Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Parent_Entity__c</fullName>
        <label>Portal Parent Entity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Name__c</fullName>
        <label>Property Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RemoveCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RemoveCheckbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Year__c</fullName>
        <label>Start Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synched_Date_Time__c</fullName>
        <label>Synched Date Time</label>
        <type>DateTime</type>
    </fields>
    <label>Income</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Entity__c</columns>
        <columns>Frequency__c</columns>
        <columns>Income_Amount__c</columns>
        <columns>Income_Type__c</columns>
        <columns>Income_Growth_Rate__c</columns>
        <columns>Start_Year__c</columns>
        <columns>End_Year__c</columns>
        <columns>Employer__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IN-{00000}</displayFormat>
        <label>Income Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incomes</pluralLabel>
    <recordTypes>
        <fullName>Business_Income</fullName>
        <active>true</active>
        <label>Business Income</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Income</fullName>
        <active>true</active>
        <label>Other Income</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pension_Income</fullName>
        <active>true</active>
        <label>Pension Income</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rental_Income</fullName>
        <active>true</active>
        <label>Rental Income</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salary_Income</fullName>
        <active>true</active>
        <label>Salary Income</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>